@@ -1,3 +1,4 @@
+- #51 Fixed: Regional holidays marked as national in locale de-AT
 - #19 Add locale for sv-SE
       (Thanks to Martijn van der Ven)
 - #49 Add additional office holidays for en-US/es-US
